# linux_apps_opensource

./: .gitignore  CMakeLists.txt  COPYING  NEWS  README.md  cmake_config  install  rw101_config  setup.sh
application/: CMakeLists.txt
application/3rd/: CMakeLists.txt
application/3rd/iniparser/: CMakeLists.txt
application/3rd/qdl/: CMakeLists.txt
application/dbus/introspection/: com.rolling.helper.xml
application/include/common/: rolling_helper_cid.h  rolling_log.h  rolling_private_log.h
application/rolling_config_service/: CMakeLists.txt
application/rolling_config_service/config_set/generic/: rwwwanConfig.ini
application/rolling_config_service/include/: rolling_dynamic_config.h
application/rolling_config_service/src/: rolling_config_main.c
application/rolling_flash_service/: CMakeLists.txt  rolling_flash_common.h  rolling_flash_download.h  rolling_flash_main.c  rolling_flash_main.h  rolling_flash_parse_xml.h  rolling_flash_prepare.h  rolling_flash_recovery.h  rolling_flash_signal.h
application/rolling_flash_service/flash_set/generic/: FwUpdate.ini
application/rolling_flash_service/flash_set/rw101_lenovo/: FwUpdate.ini
application/rolling_helper_service/: CMakeLists.txt  rolling_helper_main.c
application/rolling_helper_service/common/: CMakeLists.txt  rolling_helper_adapter.h  rolling_helper_basic_func.h  rolling_helper_platform_header.h
application/rolling_helper_service/common/at_channel/: common.h  serial_port.h
application/rolling_helper_service/qualcomm/rw101/generic/: CMakeLists.txt
application/rolling_helper_service/qualcomm/rw101/lenovo/: CMakeLists.txt
application/rolling_ma_service/: CMakeLists.txt  LICENSE
binary_deb/: linux-apps-qualcomm-rw101-lenovo_2.0.29_amd64.deb
binary_deb/common_lib/: common_base_func.h  rolling-helper-gdbus-generated.h  rolling_config_helper.h  rolling_config_parse.h  rolling_flash_update.h  rolling_helper_common.h  rolling_parse_xml.h  rolling_static_config.h
debian/: README.Debian  changelog  control  copyright  install  linux-apps.modaliases  postinst  postrm  rules  watch
script/: make_deb.sh  postinst  postrm  preinst  prerm
service/lib/systemd/system/: rolling_config.service  rolling_flash.service  rolling_helper.service
service/opt/rolling/rolling_config_service/: rolling_config  rwwwanConfig.ini
service/opt/rolling/rolling_flash_service/: rolling_flash
service/opt/rolling/rolling_helper_service/: rolling_helper
service/opt/rolling/rolling_helper_service/rolling_helper_tools/: qdl
service/usr/lib/udev/rules.d/: 76-mm-rolling-linux-apps-port-types.rules  99-mm-rolling-linux-apps-port-types.rules
service/usr/share/dbus-1/system.d/: com.rolling.helper.conf
